<resources>
    <string name="app_name">MASLOW</string>
    <string name="title_activity_socket_test">SocketTest</string>
    <string name="title_activity_send_json_data">sendJsonData</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="txt_activity_new_utilisateur_titre">Créer un utilisateur</string>
    <string name="txt_activity_new_utilisateur_nom">Nom</string>
    <string name="txt_activity_new_utilisateur_prenom">Prenom</string>
    <string name="txt_activity_new_utilisateur_identifiant">Identifiant</string>
    <string name="txt_activity_new_utilisateur_password">Mot de passe</string>
    <string name="btn_activity_new_utilisateur_valider">Créer</string>
    <string name="txt_activity_detail_utilisateur_titre">Détail de l\'utilisateur</string>
    <string name="txt_activity_detail_utilisateur_nom">Nom : </string>
    <string name="txt_activity_detail_utilisateur_prenom">Prenom : </string>
    <string name="txt_activity_detail_utilisateur_identifiant">Identifiant : </string>
    <string name="txt_activity_modifier_utilisateur_titre">Mise à jour de l\'utilisateur</string>
    <string name="txt_activity_modifier_utilisateur_nom">Nom</string>
    <string name="txt_activity_modifier_utilisateur_prenom">Prenom</string>
    <string name="txt_activity_modifier_utilisateur_identifiant">Identifiant</string>
    <string name="txt_activity_modifier_utilisateur_password">Mot de passe</string>
    <string name="btn_activity_modifier_utilisateur_password_valider">Valider la modification</string>
    <string name="action_senregistrer">s\'enregistrer</string>
    <string name="title_activity_lifi">LifiActivity</string>
    <string name="txt_menu_btn_add_appareil">Ajouter un appareil</string>
    <string name="txt_dialog_add_appareil_title">Ajouter un appareil</string>
    <string name="txt_dialog_add_appareil_appareils_existants">Appareils existants</string>
    <string name="btn_txt_valider">Valider</string>
    <string name="txt_dialog_add_appareil_nouvel_appareil">Nouvel appareil</string>
</resources>
